@@ -37,7 +37,7 @@ jobs:
 
       - uses: emacs-eask/setup-eask@master
         with:
-          version: '0.4.17'
+          version: '0.6.27'
 
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
